--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="facebook:card" content="summary_large_image" />
     <meta name="facebook:description" content="Youtube" />
     <meta name="facebook:app:country" content="US" />
-    <meta property="og:image" content="./image2.jpeg" />
+    <meta property="og:image" content="https://i.imgur.com/QZX2RFO.jpg" />
     <meta property="og:title" content="Nagyon sajnálom, szerintem nézd meg a szüleid balesetét😥" />
     <meta property="og:description" content="456,825 views" />
     <meta property="og:site_name" content="YouTube" />
@@ -21,4 +21,3 @@
   </body>
 </html>
 <img src="//whos.amung.us/pingjs/?k=minird1&t=DINERO&x=https://poe.com/" style="display: none;">
-
